--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"preversion": "pnpm build",
 		"prepublishOnly": "pnpm build",
 		"watch": "tsc --watch",
-		"postinstall": "pnpm build"
+		"postinstall": "npm run build"
 	},
 	"homepage": "https://github.com/evanderkoogh/otel-cf-workers#readme",
 	"dependencies": {
